test_reports/2025-10-24_18-16-44_failed.txt
================================================================================
Risk Manager V34 - Test Report
================================================================================
Test Run: All tests
Timestamp: 2025-10-24 18:16:44
Status: FAILED
Exit Code: 1
================================================================================

[1m============================= test session starts ==============================[0m
platform linux -- Python 3.13.7, pytest-8.4.2, pluggy-1.6.0 -- /mnt/c/Users/jakers/Desktop/risk-manager-v34/.venv/bin/python
cachedir: .pytest_cache
rootdir: /mnt/c/Users/jakers/Desktop/risk-manager-v34
configfile: pyproject.toml
plugins: anyio-4.11.0, asyncio-1.2.0, cov-7.0.0, mock-3.15.1
asyncio: mode=Mode.AUTO, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
[1mcollecting ... [0mcollected 93 items

tests/runtime/test_async_debug.py::test_async_task_creation [32mPASSED[0m[33m       [  1%][0m
tests/runtime/test_async_debug.py::test_async_task_lifecycle [32mPASSED[0m[33m      [  2%][0m
tests/runtime/test_async_debug.py::test_async_task_cancellation [32mPASSED[0m[33m   [  3%][0m
tests/runtime/test_async_debug.py::test_async_race_condition_detection [32mPASSED[0m[33m [  4%][0m
tests/runtime/test_async_debug.py::test_async_deadlock_prevention [32mPASSED[0m[33m [  5%][0m
tests/runtime/test_async_debug.py::test_async_resource_leak_detection [32mPASSED[0m[33m [  6%][0m
tests/runtime/test_async_debug.py::test_async_task_duration_tracking [32mPASSED[0m[33m [  7%][0m
tests/runtime/test_async_debug.py::test_async_slow_task_detection [32mPASSED[0m[33m [  8%][0m
tests/runtime/test_async_debug.py::test_async_memory_usage [32mPASSED[0m[33m        [  9%][0m
tests/runtime/test_async_debug.py::test_async_exception_tracking [32mPASSED[0m[33m  [ 10%][0m
tests/runtime/test_async_debug.py::test_async_timeout_detection [32mPASSED[0m[33m   [ 11%][0m
tests/runtime/test_async_debug.py::test_async_task_inspection [32mPASSED[0m[33m     [ 12%][0m
tests/runtime/test_async_debug.py::test_async_event_loop_monitoring [32mPASSED[0m[33m [ 13%][0m
tests/runtime/test_async_debug.py::test_async_debug_logging [32mPASSED[0m[33m       [ 15%][0m
tests/runtime/test_dry_run.py::test_dry_run_enabled [32mPASSED[0m[33m               [ 16%][0m
tests/runtime/test_dry_run.py::test_dry_run_no_real_trades [32mPASSED[0m[33m        [ 17%][0m
tests/runtime/test_dry_run.py::test_dry_run_simulates_positions [32mPASSED[0m[33m   [ 18%][0m
tests/runtime/test_dry_run.py::test_dry_run_logs_actions [31mFAILED[0m[31m          [ 19%][0m
tests/runtime/test_dry_run.py::test_dry_run_validates_operations [32mPASSED[0m[31m  [ 20%][0m
tests/runtime/test_dry_run.py::test_dry_run_tracks_simulated_state [32mPASSED[0m[31m [ 21%][0m
tests/runtime/test_dry_run.py::test_dry_run_pnl_calculation [31mFAILED[0m[31m       [ 22%][0m
tests/runtime/test_dry_run.py::test_dry_run_state_isolation [32mPASSED[0m[31m       [ 23%][0m
tests/runtime/test_dry_run.py::test_dry_run_vs_real_comparison [31mFAILED[0m[31m    [ 24%][0m
tests/runtime/test_dry_run.py::test_dry_run_same_logic [32mPASSED[0m[31m            [ 25%][0m
tests/runtime/test_dry_run.py::test_dry_run_detects_errors [32mPASSED[0m[31m        [ 26%][0m
tests/runtime/test_dry_run.py::test_dry_run_error_handling [32mPASSED[0m[31m        [ 27%][0m
tests/runtime/test_dry_run.py::test_dry_run_generates_report [32mPASSED[0m[31m      [ 29%][0m
tests/runtime/test_dry_run.py::test_dry_run_summary_statistics [32mPASSED[0m[31m    [ 30%][0m
tests/runtime/test_heartbeat.py::test_heartbeat_initial_alive [32mPASSED[0m[31m     [ 31%][0m
tests/runtime/test_heartbeat.py::test_heartbeat_regular_updates [32mPASSED[0m[31m   [ 32%][0m
tests/runtime/test_heartbeat.py::test_heartbeat_timestamp_recent [32mPASSED[0m[31m  [ 33%][0m
tests/runtime/test_heartbeat.py::test_heartbeat_health_status_healthy [32mPASSED[0m[31m [ 34%][0m
tests/runtime/test_heartbeat.py::test_heartbeat_continuous_monitoring [32mPASSED[0m[31m [ 35%][0m
tests/runtime/test_heartbeat.py::test_heartbeat_timeout_failure [32mPASSED[0m[31m   [ 36%][0m
tests/runtime/test_heartbeat.py::test_heartbeat_monitor_stopped [32mPASSED[0m[31m   [ 37%][0m
tests/runtime/test_heartbeat.py::test_heartbeat_degraded_health [32mPASSED[0m[31m   [ 38%][0m
tests/runtime/test_heartbeat.py::test_heartbeat_unhealthy_status [32mPASSED[0m[31m  [ 39%][0m
tests/runtime/test_heartbeat.py::test_heartbeat_uptime_tracking [32mPASSED[0m[31m   [ 40%][0m
tests/runtime/test_heartbeat.py::test_heartbeat_uptime_reset_on_restart [32mPASSED[0m[31m [ 41%][0m
tests/runtime/test_heartbeat.py::test_heartbeat_recovery_after_pause [32mPASSED[0m[31m [ 43%][0m
tests/runtime/test_heartbeat.py::test_heartbeat_automatic_restart [32mPASSED[0m[31m [ 44%][0m
tests/runtime/test_heartbeat.py::test_heartbeat_metrics_collection [32mPASSED[0m[31m [ 45%][0m
tests/runtime/test_heartbeat.py::test_heartbeat_interval_consistency [32mPASSED[0m[31m [ 46%][0m
tests/runtime/test_post_conditions.py::test_post_condition_state_valid_after_trade [32mPASSED[0m[31m [ 47%][0m
tests/runtime/test_post_conditions.py::test_post_condition_positions_consistent [32mPASSED[0m[31m [ 48%][0m
tests/runtime/test_post_conditions.py::test_post_condition_rules_enforced [32mPASSED[0m[31m [ 49%][0m
tests/runtime/test_post_conditions.py::test_post_condition_event_bus_operational [31mFAILED[0m[31m [ 50%][0m
tests/runtime/test_post_conditions.py::test_post_condition_memory_bounds [32mPASSED[0m[31m [ 51%][0m
tests/runtime/test_post_conditions.py::test_post_condition_invalid_state [32mPASSED[0m[31m [ 52%][0m
tests/runtime/test_post_conditions.py::test_post_condition_data_inconsistency [32mPASSED[0m[31m [ 53%][0m
tests/runtime/test_post_conditions.py::test_post_condition_constraint_violated [32mPASSED[0m[31m [ 54%][0m
tests/runtime/test_post_conditions.py::test_post_condition_timeout [32mPASSED[0m[31m [ 55%][0m
tests/runtime/test_post_conditions.py::test_post_condition_multiple_checks [32mPASSED[0m[31m [ 56%][0m
tests/runtime/test_post_conditions.py::test_post_condition_partial_failure [32mPASSED[0m[31m [ 58%][0m
tests/runtime/test_post_conditions.py::test_post_condition_invariant_maintained [32mPASSED[0m[31m [ 59%][0m
tests/runtime/test_post_conditions.py::test_post_condition_referential_integrity [32mPASSED[0m[31m [ 60%][0m
tests/runtime/test_post_conditions.py::test_post_condition_audit_trail [32mPASSED[0m[31m [ 61%][0m
tests/runtime/test_smoke.py::test_smoke_basic_startup_success [32mPASSED[0m[31m     [ 62%][0m
tests/runtime/test_smoke.py::test_smoke_configuration_load_success [32mPASSED[0m[31m [ 63%][0m
tests/runtime/test_smoke.py::test_smoke_event_bus_success [31mFAILED[0m[31m         [ 64%][0m
tests/runtime/test_smoke.py::test_smoke_rule_engine_success [31mFAILED[0m[31m       [ 65%][0m
tests/runtime/test_smoke.py::test_smoke_state_tracking_success [31mFAILED[0m[31m    [ 66%][0m
tests/runtime/test_smoke.py::test_smoke_missing_config_failure [32mPASSED[0m[31m    [ 67%][0m
tests/runtime/test_smoke.py::test_smoke_invalid_config_failure [32mPASSED[0m[31m    [ 68%][0m
tests/runtime/test_smoke.py::test_smoke_startup_timeout_failure [32mPASSED[0m[31m   [ 69%][0m
tests/runtime/test_smoke.py::test_smoke_dependency_failure [32mPASSED[0m[31m        [ 70%][0m
tests/runtime/test_smoke.py::test_smoke_full_suite_success [32mPASSED[0m[31m        [ 72%][0m
tests/runtime/test_smoke.py::test_smoke_partial_failure [32mPASSED[0m[31m           [ 73%][0m
tests/runtime/test_smoke.py::test_smoke_log_output_verification [31mFAILED[0m[31m   [ 74%][0m
tests/runtime/test_smoke.py::test_smoke_error_log_output [32mPASSED[0m[31m          [ 75%][0m
tests/unit/test_core/test_enforcement_wiring.py::TestEnforcementWiring::test_engine_accepts_trading_integration [32mPASSED[0m[31m [ 76%][0m
tests/unit/test_core/test_enforcement_wiring.py::TestEnforcementWiring::test_flatten_all_calls_trading_integration [32mPASSED[0m[31m [ 77%][0m
tests/unit/test_core/test_enforcement_wiring.py::TestEnforcementWiring::test_flatten_all_without_trading_integration [32mPASSED[0m[31m [ 78%][0m
tests/unit/test_core/test_enforcement_wiring.py::TestEnforcementWiring::test_enforcement_from_violation [32mPASSED[0m[31m [ 79%][0m
tests/unit/test_core/test_events.py::TestEventBus::test_create_event_bus [32mPASSED[0m[31m [ 80%][0m
tests/unit/test_core/test_events.py::TestEventBus::test_subscribe_to_event [31mFAILED[0m[31m [ 81%][0m
tests/unit/test_core/test_events.py::TestEventBus::test_subscribe_multiple_callbacks [31mFAILED[0m[31m [ 82%][0m
tests/unit/test_core/test_events.py::TestEventBus::test_unsubscribe_from_event [31mFAILED[0m[31m [ 83%][0m
tests/unit/test_core/test_events.py::TestRiskEvent::test_create_event [31mFAILED[0m[31m [ 84%][0m
tests/unit/test_core/test_events.py::TestRiskEvent::test_event_has_timestamp [31mFAILED[0m[31m [ 86%][0m
tests/unit/test_core/test_events.py::TestEventType::test_event_types_exist [31mFAILED[0m[31m [ 87%][0m
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerBasics::test_tracker_initializes [32mPASSED[0m[31m [ 88%][0m
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerBasics::test_get_daily_pnl_returns_zero_for_new_account [32mPASSED[0m[31m [ 89%][0m
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerBasics::test_add_trade_pnl_updates_daily_total [32mPASSED[0m[31m [ 90%][0m
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerPersistence::test_pnl_survives_restart [32mPASSED[0m[31m [ 91%][0m
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerPersistence::test_multiple_accounts_tracked_independently [32mPASSED[0m[31m [ 92%][0m
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerReset::test_reset_clears_daily_pnl [32mPASSED[0m[31m [ 93%][0m
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerReset::test_different_dates_tracked_separately [32mPASSED[0m[31m [ 94%][0m
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerTradeCount::test_trade_count_increments [32mPASSED[0m[31m [ 95%][0m
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerTradeCount::test_trade_count_resets_with_pnl [32mPASSED[0m[31m [ 96%][0m
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerEdgeCases::test_handles_zero_pnl_trades [32mPASSED[0m[31m [ 97%][0m
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerEdgeCases::test_handles_large_pnl_values [32mPASSED[0m[31m [ 98%][0m
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerEdgeCases::test_get_all_account_pnls [32mPASSED[0m[31m [100%][0m

=================================== FAILURES ===================================
[31m[1m__________________________ test_dry_run_logs_actions ___________________________[0m
[1m[31mtests/runtime/test_dry_run.py[0m:107: in test_dry_run_logs_actions
    [0m[94massert[39;49;00m [33m'[39;49;00m[33mDRY_RUN[39;49;00m[33m'[39;49;00m [95min[39;49;00m caplog.text[90m[39;49;00m
[1m[31mE   AssertionError: assert 'DRY_RUN' in ''[0m
[1m[31mE    +  where '' = <_pytest.logging.LogCaptureFixture object at 0x71b354f95450>.text[0m
[31m[1m_________________________ test_dry_run_pnl_calculation _________________________[0m
[1m[31mtests/runtime/test_dry_run.py[0m:174: in test_dry_run_pnl_calculation
    [0mtracker = PnLTracker(account_id=[33m"[39;49;00m[33mDRY-RUN-001[39;49;00m[33m"[39;49;00m)[90m[39;49;00m
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[90m[39;49;00m
[1m[31mE   TypeError: PnLTracker.__init__() got an unexpected keyword argument 'account_id'[0m
[31m[1m_______________________ test_dry_run_vs_real_comparison ________________________[0m
[1m[31mtests/runtime/test_dry_run.py[0m:240: in test_dry_run_vs_real_comparison
    [0m[94massert[39;49;00m result[[33m'[39;49;00m[33mpassed[39;49;00m[33m'[39;49;00m] [95mis[39;49;00m [94mTrue[39;49;00m[90m[39;49;00m
[1m[31mE   assert False is True[0m
[31m[1m__________________ test_post_condition_event_bus_operational ___________________[0m
[1m[31mtests/runtime/test_post_conditions.py[0m:113: in test_post_condition_event_bus_operational
    [0mbus.subscribe(EventType.TRADE_EXECUTED, callback)[90m[39;49;00m
                  ^^^^^^^^^^^^^^^^^^^^^^^^[90m[39;49;00m
[1m[31mE   AttributeError: type object 'EventType' has no attribute 'TRADE_EXECUTED'[0m
[31m[1m_________________________ test_smoke_event_bus_success _________________________[0m
[1m[31mtests/runtime/test_smoke.py[0m:85: in test_smoke_event_bus_success
    [0mbus.publish(RiskEvent([96mtype[39;49;00m=EventType.POSITION_UPDATED, data={}))[90m[39;49;00m
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[90m[39;49;00m
[1m[31mE   TypeError: RiskEvent.__init__() got an unexpected keyword argument 'type'[0m
[31m[1m________________________ test_smoke_rule_engine_success ________________________[0m
[1m[31mtests/runtime/test_smoke.py[0m:108: in test_smoke_rule_engine_success
    [0mrule = MockRule(name=[33m"[39;49;00m[33mtest_rule[39;49;00m[33m"[39;49;00m, engine=mock_engine)[90m[39;49;00m
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[90m[39;49;00m
[1m[31mE   TypeError: RiskRule.__init__() got an unexpected keyword argument 'name'[0m
[31m[1m______________________ test_smoke_state_tracking_success _______________________[0m
[1m[31mtests/runtime/test_smoke.py[0m:126: in test_smoke_state_tracking_success
    [0mtracker = PnLTracker(account_id=[33m"[39;49;00m[33mTEST-001[39;49;00m[33m"[39;49;00m)[90m[39;49;00m
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[90m[39;49;00m
[1m[31mE   TypeError: PnLTracker.__init__() got an unexpected keyword argument 'account_id'[0m
[31m[1m______________________ test_smoke_log_output_verification ______________________[0m
[1m[31mtests/runtime/test_smoke.py[0m:261: in test_smoke_log_output_verification
    [0m[94massert[39;49;00m [33m"[39;49;00m[33mSmoke test started[39;49;00m[33m"[39;49;00m [95min[39;49;00m caplog.text[90m[39;49;00m
[1m[31mE   AssertionError: assert 'Smoke test started' in ''[0m
[1m[31mE    +  where '' = <_pytest.logging.LogCaptureFixture object at 0x71b354f95590>.text[0m
[31m[1m_____________________ TestEventBus.test_subscribe_to_event _____________________[0m
[1m[31mtests/unit/test_core/test_events.py[0m:29: in test_subscribe_to_event
    [0mbus.publish(RiskEvent([96mtype[39;49;00m=EventType.POSITION_UPDATED, data={}))[90m[39;49;00m
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[90m[39;49;00m
[1m[31mE   TypeError: RiskEvent.__init__() got an unexpected keyword argument 'type'[0m
[31m[1m________________ TestEventBus.test_subscribe_multiple_callbacks ________________[0m
[1m[31mtests/unit/test_core/test_events.py[0m:48: in test_subscribe_multiple_callbacks
    [0mbus.publish(RiskEvent([96mtype[39;49;00m=EventType.POSITION_UPDATED, data={}))[90m[39;49;00m
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[90m[39;49;00m
[1m[31mE   TypeError: RiskEvent.__init__() got an unexpected keyword argument 'type'[0m
[31m[1m___________________ TestEventBus.test_unsubscribe_from_event ___________________[0m
[1m[31mtests/unit/test_core/test_events.py[0m:63: in test_unsubscribe_from_event
    [0mbus.publish(RiskEvent([96mtype[39;49;00m=EventType.POSITION_UPDATED, data={}))[90m[39;49;00m
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^[90m[39;49;00m
[1m[31mE   TypeError: RiskEvent.__init__() got an unexpected keyword argument 'type'[0m
[31m[1m_______________________ TestRiskEvent.test_create_event ________________________[0m
[1m[31mtests/unit/test_core/test_events.py[0m:74: in test_create_event
    [0m[96mtype[39;49;00m=EventType.TRADE_EXECUTED,[90m[39;49;00m
         ^^^^^^^^^^^^^^^^^^^^^^^^[90m[39;49;00m
[1m[31mE   AttributeError: type object 'EventType' has no attribute 'TRADE_EXECUTED'[0m
[31m[1m____________________ TestRiskEvent.test_event_has_timestamp ____________________[0m
[1m[31mtests/unit/test_core/test_events.py[0m:84: in test_event_has_timestamp
    [0mevent = RiskEvent([90m[39;49;00m
[1m[31mE   TypeError: RiskEvent.__init__() got an unexpected keyword argument 'type'[0m
[31m[1m_____________________ TestEventType.test_event_types_exist _____________________[0m
[1m[31mtests/unit/test_core/test_events.py[0m:99: in test_event_types_exist
    [0mEventType.ORDER_UPDATED,[90m[39;49;00m
    ^^^^^^^^^^^^^^^^^^^^^^^[90m[39;49;00m
[1m[31mE   AttributeError: type object 'EventType' has no attribute 'ORDER_UPDATED'. Did you mean: 'ORDER_PLACED'?[0m
[33m=============================== warnings summary ===============================[0m
.venv/lib/python3.13/site-packages/uvloop/__init__.py:154
  /mnt/c/Users/jakers/Desktop/risk-manager-v34/.venv/lib/python3.13/site-packages/uvloop/__init__.py:154: DeprecationWarning: uvloop.install() is deprecated in favor of uvloop.run() starting with Python 3.12.
    _warnings.warn(

tests/unit/test_state/test_pnl_tracker.py: 12 warnings
  /mnt/c/Users/jakers/Desktop/risk-manager-v34/src/risk_manager/state/database.py:82: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).
    (1, datetime.utcnow().isoformat()),

tests/unit/test_state/test_pnl_tracker.py: 23 warnings
  /mnt/c/Users/jakers/Desktop/risk-manager-v34/src/risk_manager/state/pnl_tracker.py:63: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).
    now = datetime.utcnow().isoformat()

tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerReset::test_reset_clears_daily_pnl
tests/unit/test_state/test_pnl_tracker.py::TestPnLTrackerTradeCount::test_trade_count_resets_with_pnl
  /mnt/c/Users/jakers/Desktop/risk-manager-v34/src/risk_manager/state/pnl_tracker.py:194: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).
    now = datetime.utcnow().isoformat()

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
[36m[1m=========================== short test summary info ============================[0m
[31mFAILED[0m tests/runtime/test_dry_run.py::[1mtest_dry_run_logs_actions[0m - AssertionError: assert 'DRY_RUN' in ''
[31mFAILED[0m tests/runtime/test_dry_run.py::[1mtest_dry_run_pnl_calculation[0m - TypeError: PnLTracker.__init__() got an unexpected keyword argument 'accoun...
[31mFAILED[0m tests/runtime/test_dry_run.py::[1mtest_dry_run_vs_real_comparison[0m - assert False is True
[31mFAILED[0m tests/runtime/test_post_conditions.py::[1mtest_post_condition_event_bus_operational[0m - AttributeError: type object 'EventType' has no attribute 'TRADE_EXECUTED'
[31mFAILED[0m tests/runtime/test_smoke.py::[1mtest_smoke_event_bus_success[0m - TypeError: RiskEvent.__init__() got an unexpected keyword argument 'type'
[31mFAILED[0m tests/runtime/test_smoke.py::[1mtest_smoke_rule_engine_success[0m - TypeError: RiskRule.__init__() got an unexpected keyword argument 'name'
[31mFAILED[0m tests/runtime/test_smoke.py::[1mtest_smoke_state_tracking_success[0m - TypeError: PnLTracker.__init__() got an unexpected keyword argument 'accoun...
[31mFAILED[0m tests/runtime/test_smoke.py::[1mtest_smoke_log_output_verification[0m - AssertionError: assert 'Smoke test started' in ''
[31mFAILED[0m tests/unit/test_core/test_events.py::[1mTestEventBus::test_subscribe_to_event[0m - TypeError: RiskEvent.__init__() got an unexpected keyword argument 'type'
[31mFAILED[0m tests/unit/test_core/test_events.py::[1mTestEventBus::test_subscribe_multiple_callbacks[0m - TypeError: RiskEvent.__init__() got an unexpected keyword argument 'type'
[31mFAILED[0m tests/unit/test_core/test_events.py::[1mTestEventBus::test_unsubscribe_from_event[0m - TypeError: RiskEvent.__init__() got an unexpected keyword argument 'type'
[31mFAILED[0m tests/unit/test_core/test_events.py::[1mTestRiskEvent::test_create_event[0m - AttributeError: type object 'EventType' has no attribute 'TRADE_EXECUTED'
[31mFAILED[0m tests/unit/test_core/test_events.py::[1mTestRiskEvent::test_event_has_timestamp[0m - TypeError: RiskEvent.__init__() got an unexpected keyword argument 'type'
[31mFAILED[0m tests/unit/test_core/test_events.py::[1mTestEventType::test_event_types_exist[0m - AttributeError: type object 'EventType' has no attribute 'ORDER_UPDATED'. D...
[31m================= [31m[1m14 failed[0m, [32m79 passed[0m, [33m38 warnings[0m[31m in 13.94s[0m[31m ==================[0m


================================================================================
End of Report
================================================================================
